--- a/VShop.Web/appsettings.json
+++ b/VShop.Web/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ServiceUri": {
-    "ProductApi": "https://localhost:7035"
+    "ProductApi": "https://localhost:7035",
+    "IdentityServer": "https://localhost:7013"
+  },
+  "Client": {
+    "Secret":  "abracadabra#simsalabim"
   }
 }
