--- a/VShop.ProductApi/appsettings.json
+++ b/VShop.ProductApi/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=VShopDB;Uid=admin;Pwd=fafa231094"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "VShop.IdentityServer": {
+    "ApplicationUrl": "https://localhost:7013"
+  }
 }
