Definindo configurações e serviços para consumir microsserviço CartApi.

--- a/VShop.Web/appsettings.json
+++ b/VShop.Web/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ServiceUri": {
     "ProductApi": "https://localhost:7035",
-    "IdentityServer": "https://localhost:7013"
+    "IdentityServer": "https://localhost:7013",
+    "CartApi": "https://localhost:7291"
   },
   "Client": {
     "Secret":  "abracadabra#simsalabim"
