Consumindo microsserviço DiscountApi.

--- a/VShop.Web/appsettings.json
+++ b/VShop.Web/appsettings.json
@@ -9,7 +9,8 @@
   "ServiceUri": {
     "ProductApi": "https://localhost:7035",
     "IdentityServer": "https://localhost:7013",
-    "CartApi": "https://localhost:7291"
+    "CartApi": "https://localhost:7291",
+    "DiscountApi": "https://localhost:7252"
   },
   "Client": {
     "Secret":  "abracadabra#simsalabim"
